--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -76,7 +76,7 @@
         </div>
         <div class="p-5 col-12 col-md-6 col-lg-3">
             
-            <img src="../imagen/difusor 3-2.jpg" class="card-img-top" alt="Difusor" height="250px">   
+            <img src="../imagen/Difusor 3-2.jpg" class="card-img-top" alt="Difusor" height="250px">   
             <div class="card-body - p-3">
               <h5 class="card-title">Difusor</h5>
               <p class="card-text">Productos 100% genuinos. Consulte Stock</p>
